@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	8.70 (gritter) 1/14/10";
+	"@(#)/usr/ucb/otfdump.sl	8.71 (gritter) 2/7/10";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  8.70 (gritter) 1/14/10";
-const char creator[] = "Heirloom Documentation Tools - dpost 8.70 (gritter) 1/14/10";
+static const char sccsid[] USED = "@(#)dpost.sl  8.71 (gritter) 2/7/10";
+const char creator[] = "Heirloom Documentation Tools - dpost 8.71 (gritter) 2/7/10";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.70 (gritter) 1/14/10";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.71 (gritter) 2/7/10";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.70 (gritter) 1/14/10";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.71 (gritter) 2/7/10";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "8.70";
+const char revision[] = "8.71";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.111 (gritter) 10/23/09
@@ -26,7 +26,7 @@ n2.c: * Sccsid @(#)n2.c	1.47 (gritter) 5/25/08
 n3.c: * Sccsid @(#)n3.c	1.181 (gritter) 10/23/09
 n4.c: * Sccsid @(#)n4.c	1.102 (gritter) 10/23/09
 n5.c: * Sccsid @(#)n5.c	1.130 (gritter) 10/23/09
-n7.c: * Sccsid @(#)n7.c	1.177 (gritter) 5/11/07
+n7.c: * Sccsid @(#)n7.c	1.178 (gritter) 2/7/10
 n8.c: * Sccsid @(#)n8.c	1.43 (gritter) 8/4/07
 n9.c: * Sccsid @(#)n9.c	1.78 (gritter) 10/23/09
 ni.c: * Sccsid @(#)ni.c	1.47 (gritter) 12/17/06
@@ -46,7 +46,7 @@ troff.d/otf.c: * Sccsid @(#)otf.c	1.67 (gritter) 1/14/10
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/pt.h: * Sccsid @(#)pt.h	1.54 (gritter) 8/19/08
 troff.d/t10.c: * Sccsid @(#)t10.c	1.98 (gritter) 8/19/08
-troff.d/t6.c: * Sccsid @(#)t6.c	1.193 (gritter) 8/19/08
+troff.d/t6.c: * Sccsid @(#)t6.c	1.194 (gritter) 2/7/10
 troff.d/troff.h: * Sccsid @(#)troff.h	1.27 (gritter) 8/19/08
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.14 (gritter) 11/2/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.3 (gritter) 11/2/06
